--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,10 +1,10 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: fengshang0 # Your GitHub organization or username, where this repository lives
+repo: upp # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
+  - name: baidu
+    url: https://www.baidu.com
   - name: Wikipedia
     url: https://en.wikipedia.org
   - name: Hacker News
